[tool.poetry]
name = "api-delivery"
version = "0.1.0"
description = ""
authors = ["Soilenyis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
